--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
     --color-paragraf: #757575;
     --heading-font-family: 'Raleway', sans-serif;
     --heading-color: #2196F3;
+    --back-color-paragraf:#F5F4FA;
 }
 body{
     width: 1600px;
@@ -128,7 +129,6 @@ ul{
     color:var(--heading-color);
 }
 .main-menu{
-   
     padding-right: 330px;
     margin-right: 0px;
 }
@@ -155,7 +155,7 @@ ul{
     line-height: normal;
     text-decoration: none;
     justify-content: space-between; 
-    width: 135px;
+    width: 160x;
     height: 16px;
     display: flex;
 	align-items: center;
@@ -165,14 +165,11 @@ ul{
 .contacts-mail-icon{
     width: 16px;
 	max-height: 12px;
+    color:#757575;
 }
 .contacts-phone-icon{
     width: 10px;
 	height: 16px;
-}
-.contacts-phone-icon, svg:hover,
-.contacts-mail-icon, svg:hover {
-   color: var(--heading-color);
 }
 .global-header, .main-contacts {
     height: 80px;
@@ -184,8 +181,16 @@ ul{
     gap: 60px;
     align-items: center;
 }
-.contacts-mail-span:hover, .contacts-phone-span:hover {
-    color: var(--heading-color);  
+.global-header .contacts-mail li:hover,
+.global-header .contacts-phone li:hover,
+.global-header .contacts-mail-icon:hover,
+.global-header .contacts-phone-icon:hover,
+.global-header .contacts-mail-icon-svg:hover,
+.global-header .contacts-phone-iconsvg:hover,
+.global-header .contacts-mail-span:hover,
+.global-header .contacts-phone-span:hover {
+    color: var(--heading-color); 
+    fill: var(--heading-color); 
 }
 
 /* section-background*/
@@ -197,6 +202,14 @@ ul{
 	flex-direction: column;
 	align-items: center;
 	margin: 0 -200px 0 -200px;
+}
+.background-section{
+    background-image: linear-gradient(
+			rgba(47, 48, 58, 0.4),
+			rgba(47, 48, 58, 0.4)
+		),
+		url(../images/background_image.png);
+	min-height: 600px;
 }
 .title-background-section{
     color: #FFFFFF;
@@ -226,13 +239,11 @@ ul{
 	align-content: flex-start;
     margin: 0 -200px 0 -200px;
 }
-
 .portofolio-main-section{
     width: 1200px;
     margin-top: 94px;
     margin-bottom: 94px;
 }
-
 .section,.portofolio-main-section,.portfolio-button-list{
     width: 1200px;
 	text-align: center;
@@ -262,7 +273,6 @@ ul{
 	padding-left: 0;
 	gap: 30px;
 }
-
 .project-card > h4 {
 	color: var(--color-text-font);
 	line-height: 30px;
@@ -270,7 +280,6 @@ ul{
 	font-weight: 400;
 	margin: 0 24px 20px 24px;
 }
-
 .project-card {
 	box-shadow: 0px 0px 0px 1px #eee inset;
 }
@@ -303,22 +312,22 @@ ul{
 }
 button:hover, button:focus {
     background-color:var(--heading-color);
+    color: #FFFFFF;
+	box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
+		0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
 }
 
-/*
-.button .active {
-    background-color: var(--heading-color);
-    cursor: pointer;
-    font-family: var(--text-font-family);
-    font-size: 16px;
-    border-color: transparent;
-	border-radius: 4px;
-	padding: 6px 22px 6px 22px;
-}*/
-
-
 /* section-paragraf */
-
+.section, .paragraf{
+    width: 1200px;
+	text-align: center;
+	font-weight: 500;
+	line-height: 26px;
+	letter-spacing: 0.48px;
+	border-color: transparent;
+	border-radius: 4px;
+	padding: 94px 22px 94px 22px;
+}
 .paragraf-section {
     font-family:var(--text-font-family);
 	color: var(--color-text-font);
@@ -326,7 +335,6 @@ button:hover, button:focus {
 	margin: auto;  
     margin-top: 0px;
 }
-
 .paragraf, 
 .photo-our-team{
     display: flex;
@@ -350,15 +358,11 @@ button:hover, button:focus {
 	flex-wrap: nowrap;
 	justify-content: space-between;
 	align-items: baseline;
-
 }
 .paragraf-card{
     width: 270px;
 	display: flex;
 	flex-direction: column;
-}
-.title-paragraf{
-    
 }
 .paragraf-card .title-paragraf 
 .paragraf-card p{
@@ -375,15 +379,20 @@ button:hover, button:focus {
     color: var(--shaded-color);
 	line-height: 24px;
 }
-    
-/*.paragraf-section p {
-    display: flex;
-    justify-content: space-between;
-    padding-left: 0;
-    margin: 0;
-    gap: 30px;
-}*/
-
+.image-card{
+    width: 270px;
+	height: 120px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: var(--back-color-paragraf);
+	margin-bottom: 30px;
+}
+.image-card svg {
+    width: 70px;
+	height: 70px;
+}
+ 
 .paragraf-section p, .our-team p,.section-container p{
     font-family: var(--text-font-family);
     color: var(--color-paragraf);
@@ -392,6 +401,17 @@ button:hover, button:focus {
 
 /* section-what-we-do */
 
+.section-what-we-do{
+    width: 1200px;
+	text-align: center;
+	font-weight: 500;
+	line-height: 26px;
+	letter-spacing: 0.48px;
+	border-color: transparent;
+	border-radius: 4px;
+	padding: 0px 22px 94px 22px;
+    margin-top: -94px;
+}
 .section-what-we-do{
     padding-top: 0px;
 }
@@ -409,7 +429,12 @@ button:hover, button:focus {
 
 /* section-our-team */
 
-.our-team,.photo-our-team, .card-our-team{
+.our-team,.photo-our-team{
+	width: 270px;
+	border-radius: 0px 0px 4px 4px;
+	border-radius: 0px 0px 4px 4px;
+}
+.card-our-team{
     background-color: #FFFFFF;
 	width: 270px;
 	border-radius: 0px 0px 4px 4px;
@@ -417,7 +442,6 @@ button:hover, button:focus {
 	box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
 	0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
-
 .name{
     font-family:var(--text-font-family);
     font-size: 16px;
@@ -439,9 +463,70 @@ button:hover, button:focus {
 	width: 1600px;
     margin: 0 -200px 0 -200px;
 }
-.photo-our-team{
+.photo-our-team {
     margin: 0 200px 0 200px;
     width: 1200px;
+}
+.icons-list {
+	display: flex;
+	justify-content: center;
+	margin: 16px 32px 30px 32px;
+	gap: 10px;
+}
+.icon {
+	width: 44px;
+	height: 44px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 50%;
+	fill: var(--shaded-color);
+}
+.icon svg {
+	width: 20px;
+	height: 20px;
+}
+.icon:hover,
+.icon:focus {
+	background-color: var(--link-color-active);
+	fill: var(--text-dark-bg-color);
+}
+.icon svg:hover,
+.icon svg:focus {
+	fill: var(--text-dark-bg-color);
+}
+
+/* section-container*/
+
+.customers-section {
+    list-style-type: none;
+	padding-left: 0;
+	margin-top: 0;
+	margin-bottom: 0;
+    display: flex;
+	justify-content: space-between;
+	gap: 30px;
+}
+.icon-logo-card {
+	width: 170px;
+	height: 92px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 4px;
+	border: 1px solid #afb1b8;
+}
+.icon-logo-card svg {
+	width: 106px;
+	height: 60px;
+	fill: var(--color-paragraf);
+}
+.icon-logo-card:hover,
+.icon-logo-card:focus,
+.icon-logo-card svg:hover,
+.icon-logo-card svg:focus {
+	border-color: var(--heading-color);
+	fill: var(--heading-color);
 }
 
 /* section-footer */
