--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,6 @@ body{
 	width: 1200px;
 	margin: auto;
 }
-
 .global-header{
     font-family :var(--text-font-family);
     font-size: 14px;
@@ -53,7 +52,6 @@ h4{
     font-family: var(--text-font-family);
     color: var(--color-text-font);
 }
-
 p{
     display: block;
     margin-block-start: 1em;
@@ -62,7 +60,6 @@ p{
     margin-inline-end: 0px;
     color:var(--color-paragraf);
 }
-
 ul{
     list-style-type: none;
 }
@@ -70,7 +67,6 @@ ul{
 	padding-top: 94px;
 	padding-bottom: 94px;
 }
-
 
 /* logo */
 
@@ -80,8 +76,7 @@ ul{
     font-weight: 700; 
     color: var(--heading-color);
     font-size: 26px;
-    text-decoration: none;
-    
+    text-decoration: none;  
 }
 .logowebstudio, ol{
     width: 145px;
@@ -472,7 +467,6 @@ button:hover, button:focus {
 	justify-content: center;
 	margin: 16px 32px 30px 32px;
 	gap: 10px;
-
 }
 .icon {
 	width: 44px;
@@ -537,20 +531,25 @@ button:hover, button:focus {
     padding-left: 215px;
 	padding-top: 60px;
     margin: 0 -200px 0 -200px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-
 .footer{
     width: 1200px;
     margin-bottom: 0px;
+    margin-right: 0px;
 }
-.main-footer, .adress-contacts-footer, .adress-footer, .contacts-footer{
+.main-footer, .adress-contacts-footer, .adress-footer, .contacts-footer {
     display: flex;
 	flex-direction: column;
 	gap: 12px;
-    width: 1200px;
+    width: 231px;
     padding-left: 0px;
+    margin-right: 0px;
+    border-right: 0px;
+    padding-right: 0px; 
 }
-
 .footer-logo-web, .footer-logo-studio span{
     font-weight: bold;
     font-family: var(--heading-font-family);
@@ -584,22 +583,35 @@ button:hover, button:focus {
 .adress-footer a:hover, .contacts-footer a:hover {
     color: var(--heading-color);
 }
-.global-footer-social-links, .icons-list, h3 {
+.main-footer, .global-footer-social-links{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.global-footer-social-links{
+	text-transform: uppercase;
+    display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	align-items: center;
+	align-content: stretch; 
+    flex-direction: column;
+    padding-top: -75px;
+    margin: 0px;
+    width: 213px;
+}
+.global-footer-social-links h3{
     font-size: 14px;
 	font-weight: 700;
 	letter-spacing: 0.42px;
 	text-transform: uppercase;
     color: #FFFFFF;
-    display: flex;
-	flex-direction: row;
-	flex-wrap: nowrap;
-	justify-content: center;
-	align-items: center;
-	align-content: stretch; 
-    padding-top: -75px;
+}
+.icons-list h3 {
+
 }
 .global-footer-social-links, .icons-list {
-
+  
 }
 .global-footer-social-links .icon {
     background-color: rgba(255, 255, 255, 0.1);
