--- a/css/styles.css
+++ b/css/styles.css
@@ -141,7 +141,6 @@ ul{
     align-items: center;
     padding-left: 0px;
 }
-    
 .contacts-mail a, .contacts-phone a, .contacts-mail-span, .contacts-phone-span{
     color:var(--color-paragraf);
     font-family: var(--text-font-family);
@@ -156,7 +155,6 @@ ul{
 	align-items: center;
 	gap: 10px;
 }
-
 .contacts-mail-icon{
     width: 16px;
 	max-height: 12px;
@@ -176,14 +174,14 @@ ul{
     gap: 60px;
     align-items: center;
 }
-.global-header .contacts-mail li:hover,
-.global-header .contacts-phone li:hover,
-.global-header .contacts-mail-icon:hover,
-.global-header .contacts-phone-icon:hover,
-.global-header .contacts-mail-icon-svg:hover,
-.global-header .contacts-phone-iconsvg:hover,
-.global-header .contacts-mail-span:hover,
-.global-header .contacts-phone-span:hover {
+.global-header, .main-contacts, .contacts, .contacts-mail li:hover,
+.global-header, .main-contacts, .contacts, .contacts-phone li:hover,
+.global-header, .main-contacts, .contacts, .contacts-mail-icon:hover,
+.global-header, .main-contacts, .contacts, .contacts-phone-icon:hover,
+.global-header, .main-contacts, .contacts, .contacts-mail-icon-svg:hover,
+.global-header, .main-contacts, .contacts, .contacts-phone-iconsvg:hover,
+.global-header, .main-contacts, .contacts, .contacts-mail-span:hover,
+.global-header, .main-contacts, .main-contacts,.contacts, .contacts-phone-span:hover {
     color: var(--heading-color); 
     fill: var(--heading-color); 
 }
@@ -528,17 +526,22 @@ button:hover, button:focus {
 
 .footer-section{
     background-color: #2F303A;
-    padding-left: 215px;
 	padding-top: 60px;
     margin: 0 -200px 0 -200px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 251px;
 }
 .footer{
     width: 1200px;
     margin-bottom: 0px;
     margin-right: 0px;
+    padding-left: 215px;
+}
+.main-footer{
+    padding-top: 40px;
+    margin-left: -150px;
 }
 .main-footer, .adress-contacts-footer, .adress-footer, .contacts-footer {
     display: flex;
@@ -580,25 +583,21 @@ button:hover, button:focus {
     color:var(--color-paragraf);
     text-decoration: none;
 }
-.adress-footer a:hover, .contacts-footer a:hover {
+.adress-footer a:hover, .contacts-footer a:hover{
     color: var(--heading-color);
 }
 .main-footer, .global-footer-social-links{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    
 }
 .global-footer-social-links{
 	text-transform: uppercase;
-    display: flex;
-	flex-direction: row;
 	flex-wrap: nowrap;
 	align-items: center;
-	align-content: stretch; 
     flex-direction: column;
-    padding-top: -75px;
     margin: 0px;
     width: 213px;
+    padding-top: -20px;
+    margin-left: 50px;
 }
 .global-footer-social-links h3{
     font-size: 14px;
@@ -606,12 +605,17 @@ button:hover, button:focus {
 	letter-spacing: 0.42px;
 	text-transform: uppercase;
     color: #FFFFFF;
+    justify-content:flex-start;
+    margin-left: -120px;
+    
 }
 .icons-list h3 {
 
 }
-.global-footer-social-links, .icons-list {
-  
+.footer-section, .footer, .global-footer-social-links, .main-footer, .icons-list {
+    display: flex;
+   
+
 }
 .global-footer-social-links .icon {
     background-color: rgba(255, 255, 255, 0.1);
