Un alt commit modificari 7

--- a/css/styles.css
+++ b/css/styles.css
@@ -486,7 +486,7 @@ button:hover, button:focus {
 	justify-content: center;
 	align-items: center;
 	border-radius: 50%;
-    color: #AFB1B8;
+    color: #757575;
 }
 .icon svg {
 	width: 20px;
