--- a/css/styles.css
+++ b/css/styles.css
@@ -483,7 +483,6 @@ button:hover, button:focus {
 	justify-content: center;
 	align-items: center;
 	border-radius: 50%;
-    color: #afb1b8;
 }
 .icon svg {
 	width: 20px;
@@ -493,6 +492,7 @@ button:hover, button:focus {
 .icon:focus,
 .icon svg:hover,
 .icon svg:focus {
+    color: #FFFFFF;
     fill: #FFFFFF;
     background: var(--heading-color);
 }
