--- a/css/styles.css
+++ b/css/styles.css
@@ -483,16 +483,17 @@ button:hover, button:focus {
 	justify-content: center;
 	align-items: center;
 	border-radius: 50%;
+    color: #afb1b8;
 }
 .icon svg {
 	width: 20px;
 	height: 20px;
+    color: #afb1b8;
 }
 .icon:hover,
 .icon:focus,
 .icon svg:hover,
 .icon svg:focus {
-    color: #FFFFFF;
     fill: #FFFFFF;
     background: var(--heading-color);
 }
